budget approcal slave service updated

--- a/KGERP/Views/BillRequisition/BudgetAndEstimatingApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BudgetAndEstimatingApproveSlave.cshtml
@@ -352,9 +352,9 @@
                                             @foreach (var item in Model.ApprovalModelList)
                                             {
                                                 <td>
-                                                    @if (item.ApprobalRemarks != null)
+                                                    @if (item.ApprovalRemarks != null)
                                                     {
-                                                        <span style="font-size: 12px"><b>Remarks: </b> @item.ApprobalRemarks</span>
+                                                        <span style="font-size: 12px"><b>Remarks: </b> @item.ApprovalRemarks</span>
                                                     }
                                                     else
                                                     {
