budget and estimating list creat and updated

--- a/KGERP/Views/BillRequisition/BudgetAndEstimatingApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/BudgetAndEstimatingApprovalList.cshtml
@@ -146,10 +146,10 @@
 
                                                                                                                         @if (@item.IsApproved == false)
                                                                                                                         {
-                                                                                                                            <a href="~/BillRequisition/BudgetAndEstimatingApproveSlave?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BoQItemProductMapId" class="link-primary text-primary" title="Action for Approve"><i class="fa fa-external-link-square" aria-hidden="true"></i> Action</a>
+                                                                                                                            <a href="~/BillRequisition/BudgetAndEstimatingApproveSlave?companyId=@item.CompanyFK&BoQItemProductMapId=@item.BoQItemProductMapId" class="link-primary text-primary" title="Action for Approve"><i class="fa fa-external-link-square" aria-hidden="true"></i> Action</a>
                                                                                                                         }else
                                                                                                                         {
-                                                                                                                            <a href="~/BillRequisition/BudgetAndEstimatingApproveSlave?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BoQItemProductMapId" class="link-primary text-primary" title="Action for Approve"><i class="fa fa-external-link-square" aria-hidden="true"></i> Action</a>
+                                                                                                                            <a href="~/BillRequisition/BudgetAndEstimatingApproveSlave?companyId=@item.CompanyFK&BoQItemProductMapId=@item.BoQItemProductMapId" class="link-primary text-primary" title="Action for Approve"><i class="fa fa-external-link-square" aria-hidden="true"></i> Action</a>
 
                                                                                                                         }
 
