--- a/KGERP/Views/Quotation/QuotationMasterSlave.cshtml
+++ b/KGERP/Views/Quotation/QuotationMasterSlave.cshtml
@@ -110,26 +110,35 @@
                                         </div>
                                     </div>
 
+                                    <div class="col-md-4" id="inputQuotationFor">
+                                        <div class="form-group">
+                                            <label class="form-label">Qutation Type<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                            @Html.DropDownListFor(model => model.QuotationFor, Model.QuotationForList as SelectList, "==Select Quotation For==", new { id = "ddlQuotationFor", @class = "form-control", @required = "true" })
+                                            @Html.ValidationMessageFor(model => model.QuotationFor, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
                                     <div class="col-md-4" id="inputName">
                                         <div class="form-group">
-                                            <label class="form-label">Quotation/Supplier Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                            @Html.TextBoxFor(model => model.QuotationName, new { id = "txtQuotationName", @class = "form-control", @placeholder = "Quotation/Supplier name", @required = "true" })
+                                            <label class="form-label">Quotation Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                            @Html.TextBoxFor(model => model.QuotationName, new { id = "txtQuotationName", @class = "form-control", @placeholder = "Quotation name", @required = "true" })
                                             @Html.ValidationMessageFor(model => model.QuotationName, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-4" id="inputQuotationFor">
+                                    <div class="col-md-4" id="inputName">
                                         <div class="form-group">
-                                            <label class="form-label">Qutation For<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                            @Html.DropDownListFor(model => model.QuotationFor, Model.QuotationForList as SelectList, "==Select Quotation For==", new { id = "ddlQuotationFor", @class = "form-control", @required = "true" })
-                                            @Html.ValidationMessageFor(model => model.QuotationFor, "", new { @class = "text-danger" })
+                                            <label class="form-label">Supplier/Party<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                            @Html.TextBoxFor(model => model.SupplierId, new { id = "txtQuotationName", @class = "form-control", @placeholder = "Quotation/Supplier name", @required = "true" })
+                                            @Html.ValidationMessageFor(model => model.SupplierId, "", new { @class = "text-danger" })
+                                            @Html.HiddenFor(model => model.SupplierId, new { id = "SupplierId" })
                                         </div>
                                     </div>
 
                                     <div class="col-md-3 hidden" id="inputRequisition">
                                         <div class="form-group">
                                             <label class="form-label">Select Requisition<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                            @Html.DropDownListFor(model => model.RequisitionId, Model.RequisitionList as SelectList, "==Select Requisition==", new { id = "ddlRequisitionId", onchange = "GetMaterialSubtypeList()", @class = "form-control searchingDropdown", style = "width:100%", @required = "true" })
+                                            @Html.DropDownListFor(model => model.RequisitionId, Model.RequisitionList as SelectList, "==Select Requisition==", new { id = "ddlRequisitionId", @class = "form-control searchingDropdown", style = "width:100%", @required = "true" })
                                             @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -156,7 +165,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3" id="inputMaterialSubtype">
+                                    <div class="col-md-3 d-block" id="inputMaterialSubtype">
                                         <div class="form-group">
                                             <label class="form-label">Material Subtype<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             @Html.DropDownListFor(model => model.DetailModel.MaterialSubtypeId, Model.DetailModel.MaterialSubtypeList as SelectList, "==Select Material Subtype==", new { id = "ddlMaterialSubtypeId", onchange = "GetMaterialList()", style = "width:100%", @class = "form-control searchingDropdown", @required = "true" })
@@ -180,15 +189,15 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="inputQuality">
                                         <div class="form-group">
-                                            <label class="form-label">Select Quality<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                            <label class="form-label">Material Quality<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             @Html.DropDownListFor(model => model.DetailModel.MaterialId, Model.DetailModel.MaterialQualityList as SelectList, "==Select Quality==", new { id = "ddlMaterialQualityId", @class = "form-control searchingDropdown", @required = "true" })
                                             @Html.ValidationMessageFor(model => model.DetailModel.MaterialId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="inputQuantity">
                                         <div class="form-group">
                                             <label class="form-label">Quantity<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             @Html.TextBoxFor(model => model.DetailModel.Quantity, new { id = "txtQuantity", type = "number", step = "0.01", @class = "form-control", placeholder = "Quantity", @required = "true" })
@@ -196,7 +205,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="inputUnitRate">
                                         <div class="form-group">
                                             <label class="form-label">Unit Price<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "txtUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Unit price", @required = "true" })
@@ -204,7 +213,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="inputTotal">
                                         <div class="form-group">
                                             <label class="form-label">Total Amount<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             @Html.TextBoxFor(model => model.DetailModel.TotalAmount, new { id = "txtTotalAmount", type = "number", step = "0.01", @class = "form-control", placeholder = "Total amount", ReadOnly = "true" })
@@ -212,7 +221,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-12 d-block">
+                                    <div class="col-md-12">
                                         <div class="form-group">
                                             <label class="form-label">Remarks/Particular</label>
                                             @Html.TextAreaFor(model => model.DetailModel.Remarks, new { id = "txtRemarks", placeholder = "Type remarks/particular here", @class = "form-control", rows = 2 })
@@ -401,26 +410,50 @@
                 if ($(this).val() == @((int)EnumQuotationFor.Requisition)) {
                     $("#inputRequisition").removeClass("hidden").addClass("d-block");
                     $("#inputMaterialType").removeClass("d-block").addClass("hidden");
-                    $("#inputDate").removeClass("col-md-4").addClass("col-md-3");
-                    $("#inputName").removeClass("col-md-4").addClass("col-md-3");
-                    $("#inputQuotationFor").removeClass("col-md-4").addClass("col-md-3");
+                    $("#inputMaterialSubtype").removeClass("d-block").addClass("hidden");
 
-                    $("#inputMaterialSubtype").removeClass("col-md-3").addClass("col-md-4");
                     $("#inputMaterial").removeClass("col-md-3").addClass("col-md-4");
                     $("#inputUnitName").removeClass("col-md-3").addClass("col-md-4");
+                    $("#inputQuality").removeClass("col-md-3").addClass("col-md-4");
+                    $("#inputQuantity").removeClass("col-md-3").addClass("col-md-4");
+                    $("#inputUnitRate").removeClass("col-md-3").addClass("col-md-4");
+                    $("#inputTotal").removeClass("col-md-3").addClass("col-md-4");
                 } else {
                     $("#inputRequisition").removeClass("d-block").addClass("hidden");
-                    $("#inputRequisition").removeClass("hidden").addClass("d-block");
-                    $("#inputDate").removeClass("col-md-3").addClass("col-md-4");
-                    $("#inputName").removeClass("col-md-3").addClass("col-md-4");
-                    $("#inputQuotationFor").removeClass("col-md-3").addClass("col-md-4");
+                    $("#inputMaterialType").removeClass("hidden").addClass("d-block");
+                    $("#inputMaterialSubtype").removeClass("hidden").addClass("d-block");
 
-                    $("#inputMaterialSubtype").removeClass("col-md-4").addClass("col-md-3");
                     $("#inputMaterial").removeClass("col-md-4").addClass("col-md-3");
                     $("#inputUnitName").removeClass("col-md-4").addClass("col-md-3");
+                    $("#inputQuality").removeClass("col-md-4").addClass("col-md-3");
+                    $("#inputQuantity").removeClass("col-md-4").addClass("col-md-3");
+                    $("#inputUnitRate").removeClass("col-md-4").addClass("col-md-3");
+                    $("#inputTotal").removeClass("col-md-4").addClass("col-md-3");
                 }
             });
-
         });
+
+        $('#ddlRequisitionId').on('change', function (event) {
+            var getRequisitionId = $(this).val();
+            var showMaterialList = $("#ddlMaterialId");
+            $.ajax({
+                type: "GET",
+                url: "/Procurement/GetMaterialByRequisitionId",
+                dataType: "json",
+                data: { companyId: @Model.CompanyFK, requisitionId: getRequisitionId },
+                success: function (data) {
+                    showMaterialList.empty();
+                    showMaterialList.append("<option selected disabled>===Select Material===</option>");
+
+                    $.each(data, function (index, item) {
+                        showMaterialList.append($('<option>', {
+                            value: item.ProductId,
+                            text: item.ProductName
+                        }));
+                    });
+                }
+            });
+        });
+
     </script>
 }
